--- a/scripts/scripts5/hospitalmatrix.ipynb
+++ b/scripts/scripts5/hospitalmatrix.ipynb
@@ -25,21 +25,6 @@
    "source": [
     "def add_patient(a,b,c):      #función para añadir pacientes\n",
     "        \n",
-    "    if comp_str(a) != True or comp_str(b) != True:   #Comprobación de que los dos primeros parámetros son strings,\n",
-    "                                                         #ya que se trata de nombre y apellidos. Llamando a la función comp_str\n",
-    "        print(\"El nombre solo debe contener letras.\")\n",
-    "        return False\n",
-    "    \n",
-    "    elif comp_str(b) != True:\n",
-    "        \n",
-    "        print (\"Los apellidos solo debe contener letras.\")\n",
-    "        return False\n",
-    "    \n",
-    "    elif comp_int(c) != True:  #Comprobación de que el 3r parametro es de tipo integrer, solo números enteros,\n",
-    "                              #ya que se trata del id. Llamando a la función comp_int\n",
-    "        print(\"El id solo debe incluir números.\")\n",
-    "        return False\n",
-    "    \n",
     "    datos = a, b, c\n",
     "    pacientes.append(datos)         #Añadimos el paciente a la lista.\n",
     "    return pacientes"
@@ -89,7 +74,7 @@
     "        print(\"El id solo debe incluir números.\")\n",
     "        return False\n",
     "        \n",
-    "    elif comp_str(name) == False or comp_str(surname) == False:\n",
+    "    elif comp_alpha(name) == False or comp_alpha(surname) == False:\n",
     "        print(\"El nombre y apellido solo debe contener letras.\")\n",
     "        return False\n",
     "    \n",
@@ -110,7 +95,7 @@
     "    \n",
     "    pos = a - 1 #Variable que controla la posición de la lsta a modificar.   \n",
     "    \n",
-    "    if comp_str(name) == False:    #Condición de comprobación de los datos\n",
+    "    if comp_alpha(name) == False:    #Condición de comprobación de los datos\n",
     "        print(\"El nombre solo debe contener letras.\")\n",
     "        return False\n",
     "        \n",
@@ -141,7 +126,7 @@
     "    \n",
     "    pos = a - 1 #Variable que controla la posición de la lsta a modificar.   \n",
     "    \n",
-    "    if comp_str(surname) == False:   #Condición de comprobación de los datos\n",
+    "    if comp_alpha(surname) == False:   #Condición de comprobación de los datos\n",
     "        print(\"Los apellidos solo deben contener letras.\")\n",
     "        return False\n",
     "        \n",
@@ -230,7 +215,7 @@
    "outputs": [],
    "source": [
     "def comp_int(a):\n",
-    "    return isinstance(a, int)"
+    "    return a.isdigit()"
    ]
   },
   {
@@ -240,8 +225,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def comp_str(a):\n",
-    "    return isinstance(a, str)"
+    "def comp_alpha(a):\n",
+    "    comp = a.replace(\" \", \"\")\n",
+    "    return comp.isalpha()"
    ]
   },
   {
@@ -269,9 +255,24 @@
     "    \n",
     "    if opcion == 1:     #Llamada a la función añadir paciente\n",
     "        name = input(\"Introduce el nombre del paciente: \")\n",
-    "        surname = input(\"Introduce los apellidos del paciente: \")\n",
-    "        num_id = input(\"introduce el número de identificación del paciente: \")\n",
-    "        add_patient(name,surname,num_id)\n",
+    "        \n",
+    "        if comp_alpha(name) != True:   #Comprobación de que el nombre solo contiene letras, llamando a la función comp_alpha\n",
+    "            print(\"El nombre solo debe contener letras.\")\n",
+    "        \n",
+    "        else:\n",
+    "            surname = input(\"Introduce los apellidos del paciente: \")\n",
+    "            \n",
+    "            if comp_alpha(surname) != True: #Comprobación de que los apellidos solo contienen letras, llamando a la función comp_alpha\n",
+    "                print(\"Los apellidos solo debe contener letras.\")\n",
+    "            \n",
+    "            else:\n",
+    "                num_id = input(\"introduce el número de identificación del paciente: \")\n",
+    "                \n",
+    "                if comp_int(num_id) != True:  #Comprobación de que el id es de tipo integrer, solo números enteros, llamando a la función comp_int\n",
+    "                    print(\"El id solo debe incluir números.\")\n",
+    "                \n",
+    "                else:\n",
+    "                    add_patient(name,surname,num_id)   #Llamada a la función para añadir el nuevo paciente\n",
     "        print()\n",
     "        \n",
     "    elif opcion == 2:   #Llamada a la función ver pacientes\n",
@@ -322,20 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prepared-pierce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if comp_int(45) != True:\n",
-    "    print(\"OK\")\n",
-    "else:\n",
-    "    print(\"N\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "coral-omaha",
+   "id": "f0c772a6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -357,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1+"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
