--- a/scripts/scripts5/cifrar-AES.ipynb
+++ b/scripts/scripts5/cifrar-AES.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pad(s):\n",
+    "def pad(s):    #funcioón que rellena los datos que se le pasen para que llegue a ocupar un tamaño de bloque válido\n",
     "    return s + b\"\\0\" * (AES.block_size - len(s) %AES.block_size)"
    ]
   },
@@ -18,7 +18,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tipo_key(datos):\n",
+    "def tipo_key(datos):   #Función que comprueba si la clave es un string y rellena con * para que llegue a tener 32\n",
+    "                       #bytes y la codifica. Si la clave ya son bytes, solo se asegura que llegue a tener los \n",
+    "                       #32 bytes de longitud.\n",
     "    if(type(datos) is str):\n",
     "        datos = bytes((\"*\"*(32-len(datos)) + datos).encode(\"utf-8\"))\n",
     "    \n",
@@ -35,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tipo_datos(datos):\n",
+    "def tipo_datos(datos):  #Función que comprueba que los datos son de tipo string y los codifica\n",
     "    \n",
     "    if(type(datos) is str):\n",
     "        datos = bytes(datos.encode(\"utf-8\"))\n",
@@ -63,11 +65,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def encrypt(mensaje, key, key_size=256):\n",
-    "    key = tipo_key(key)\n",
-    "    mensaje = pad(tipo_datos(mensaje))\n",
+    "def encrypt(mensaje, key, key_size=256):  #Función que genera las variables de encriptado, utilizando\n",
+    "                                          #las funciones tipo_key() y pad() para asegurar la copatibilidad con el AES256\n",
+    "        \n",
+    "    key = tipo_key(key)                   #Se establece la clave para cifrar realizando las comprobaciones con tipo_key()\n",
+    "    mensaje = pad(tipo_datos(mensaje))    #Se establece el mensaje a cifrar asegurandose de que su tamaño cumpla los requisitos usando la función pad()\n",
     "    iv = Random.new().read(AES.block_size)\n",
-    "    cipher = AES.new(key, AES.MODE_CBC, iv)\n",
+    "    cipher = AES.new(key, AES.MODE_CBC, iv) \n",
     "    return iv + cipher.encrypt(mensaje)"
    ]
   },
@@ -78,7 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def decrypt(ciphertext, key):\n",
+    "def decrypt(ciphertext, key):  #Función que genera las variables para desencriptar, utilizando la contraseña generada antes\n",
+    "    \n",
     "    # rellenamos con * para que la contrasena pueda tener 32 bytes\n",
     "    key = tipo_key(key)\n",
     "    ciphertext = tipo_datos(ciphertext)\n",
@@ -86,7 +91,7 @@
     "    cipher = AES.new(key, AES.MODE_CBC, iv)\n",
     "    plaintext = cipher.decrypt(ciphertext[AES.block_size:])\n",
     "    \n",
-    "    return plaintext.rstrip(b\"\\0\")"
+    "    return plaintext.rstrip(b\"\\0\")   #Elimina todos los valores \\0 que se habían utilizado para que el tamaño fuera compatible con el AES256"
    ]
   },
   {
@@ -183,12 +188,13 @@
     "    for i in carpeta:  #Bucle que recorre cada fichero, lo lee como binario, lo almacena en una variable, cifra el contenido\n",
     "                       #vuelve a abrir el fichero y esta vez escribe la información cifrada.\n",
     "            \n",
-    "        file1 = open(i, 'rb')       #Variable que abre el fichero para después almacenarlo en otra variable\n",
+    "        file1 = open(i, 'rb')       #Variable que abre el fichero para después poder almacenar el contenido en otra variable\n",
     "        archivo_info = file1.read()\n",
     "        \n",
-    "        crypt = encrypt(archivo_info, key)  #Variable que almacena la información cifrada(utilizando la clave generada) y se la pas\n",
-    "                                         #a a la siguiente variable, para que la escriba sobre el fichero.\n",
-    "        file2 = open(i, 'wb')\n",
+    "        crypt = encrypt(archivo_info, key)  #Variable que almacena la información cifrada, utilizando la clave generada y \n",
+    "                                            #la función encrypt\n",
+    "            \n",
+    "        file2 = open(i, 'wb')               #Se modifica la información que contenía el archivo por la cifrada\n",
     "        file2.write(crypt)\n",
     "    \n",
     "    k_file = open(\"k.txt\", \"w\")    #Alamacenamos la clave por si no podemos descifrar en el momento y lo queremos hacer más tarde\n",
@@ -210,12 +216,13 @@
     "    for i in carpeta:     #Bucle que recorre cada fichero, lo lee como binario, lo almacena en una variable, descifra el contenido\n",
     "                          #vuelve a abrir el fichero y esta vez escribe la información descifrada.\n",
     "            \n",
-    "        file1 = open(i, 'rb')  #Variable que abre el fichero para después almacenarlo en otra variable\n",
+    "        file1 = open(i, 'rb')  #Variable que abre el fichero para después poder almacenar el contenido en otra variable\n",
     "        encrypted_info = file1.read()\n",
     "        \n",
-    "        decrypting = decrypt(encrypted_info,key)  #Variable que almacena la información descifrada(utilizando la clave generada) y se la pas\n",
-    "                                             #a a la siguiente variable, para que la escriba sobre el fichero.\n",
-    "        file2 = open(i, 'wb')\n",
+    "        decrypting = decrypt(encrypted_info,key)  #Variable que almacena la información descifrada, utilizando la clave anterior y \n",
+    "                                                  #la función decrypt\n",
+    "            \n",
+    "        file2 = open(i, 'wb')  #Se modifica la información que contenía el archivo por la descifrada\n",
     "        file2.write(decrypting)"
    ]
   },
@@ -323,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.1+"
   }
  },
  "nbformat": 4,
