--- a/scripts/scripts5/hospitalmatrix.ipynb
+++ b/scripts/scripts5/hospitalmatrix.ipynb
@@ -67,17 +67,9 @@
    "source": [
     "def mod_patient(a):   #Función que permite modificar datos de los pacientes\n",
     "    \n",
-    "    pos = a - 1 #Variable que controla la posición de la lsta a modificar.\n",
-    "    \n",
-    "    #Comprobaciones de los datos que introducimos.\n",
-    "    if comp_int(num_id) == False:\n",
-    "        print(\"El id solo debe incluir números.\")\n",
-    "        return False\n",
-    "        \n",
-    "    elif comp_alpha(name) == False or comp_alpha(surname) == False:\n",
-    "        print(\"El nombre y apellido solo debe contener letras.\")\n",
-    "        return False\n",
-    "    \n",
+    "    #Variable que controla la posición de la lista a modificar\n",
+    "    pos = a - 1 \n",
+    "     \n",
     "    #Establecemos los datos nuevos y utilizando .append los añadimos a la posición indicada\n",
     "    new_dat = name, surname, num_id\n",
     "    pacientes[pos] = new_dat\n",
@@ -93,8 +85,8 @@
    "source": [
     "def mod_patient_name(a):   #Función que permite modificar el nombre del paciente\n",
     "    \n",
-    "    pos = a - 1 #Variable que controla la posición de la lsta a modificar.   \n",
-    "    \n",
+    "    #Variable que controla la posición de la lista a modificar   \n",
+    "    pos = a - 1 \n",
     "    if comp_alpha(name) == False:    #Condición de comprobación de los datos\n",
     "        print(\"El nombre solo debe contener letras.\")\n",
     "        return False\n",
@@ -124,7 +116,8 @@
    "source": [
     "def mod_patient_surname(a): #Función que permite modificar los apellidos del paciente\n",
     "    \n",
-    "    pos = a - 1 #Variable que controla la posición de la lsta a modificar.   \n",
+    "    #Variable que controla la posición de la lista a modificar. \n",
+    "    pos = a - 1   \n",
     "    \n",
     "    if comp_alpha(surname) == False:   #Condición de comprobación de los datos\n",
     "        print(\"Los apellidos solo deben contener letras.\")\n",
@@ -155,7 +148,8 @@
    "source": [
     "def mod_patient_id(a):     #Función que permite modificar el id del paciente\n",
     "    \n",
-    "    pos = a - 1 #Variable que controla la posición de la lsta a modificar.   \n",
+    "    #Variable que controla la posición de la lsta a modificar.\n",
+    "    pos = a - 1    \n",
     "    \n",
     "    #Condición de comprobación de los datos\n",
     "    if comp_int(num_id) == False:\n",
@@ -281,27 +275,50 @@
     "    \n",
     "    elif opcion == 3:   #LLamada a la función modificar paciente\n",
     "        show_patient()\n",
-    "        modify = input(\"¿Qué paciente deseas modificar? (indica el número)\")\n",
-    "        menu_mod_patient()\n",
-    "        \n",
-    "        selection = int(input(\"¿Qué desea modificar? \"))\n",
-    "        if selection == 1:\n",
-    "            name = input(\"Introduce el nuevo nombre del paciente: \")\n",
-    "            mod_patient_name(modify)\n",
-    "            \n",
-    "        elif selection == 2:\n",
-    "            surname = input(\"Introduce los nuevos apellidos del paciente: \")\n",
-    "            mod_patient_surname(modify)\n",
-    "            \n",
-    "        elif selection == 3:\n",
-    "            num_id = input(\"introduce el nuevo número de identificación del paciente: \")\n",
-    "            mod_patient_id(modify)\n",
-    "        \n",
-    "        elif selection == 4:\n",
-    "            name = input(\"Introduce el nombre del paciente: \")\n",
-    "            surname = input(\"Introduce los apellidos del paciente: \")\n",
-    "            num_id = input(\"introduce el número de identificación del paciente: \")\n",
-    "            mod_patient(modify)\n",
+    "        modify = int(input(\"¿Qué paciente deseas modificar? (indica el número) \"))\n",
+    "        print()\n",
+    "        comp = len(pacientes)\n",
+    "        if modify <= comp :\n",
+    "            menu_mod_patient()\n",
+    "\n",
+    "            selection = int(input(\"¿Qué desea modificar? \"))\n",
+    "            print()\n",
+    "            if selection == 1:\n",
+    "                name = input(\"Introduce el nuevo nombre del paciente: \")  \n",
+    "                mod_patient_name(modify)\n",
+    "\n",
+    "            elif selection == 2:\n",
+    "                surname = input(\"Introduce los nuevos apellidos del paciente: \")\n",
+    "                mod_patient_surname(modify)\n",
+    "\n",
+    "            elif selection == 3:\n",
+    "                num_id = input(\"introduce el nuevo número de identificación del paciente: \")\n",
+    "                mod_patient_id(modify)\n",
+    "\n",
+    "            elif selection == 4:\n",
+    "                #Comprobaciones de los datos que introducimos.\n",
+    "                name = input(\"Introduce el nombre del paciente: \")\n",
+    "\n",
+    "                if comp_alpha(name) != True:     #Comprobación de que el nombre solo contiene letras, llamando a la función comp_alpha\n",
+    "                    print(\"El nombre solo debe contener letras.\")\n",
+    "\n",
+    "                else:\n",
+    "                    surname = input(\"Introduce los apellidos del paciente: \")\n",
+    "\n",
+    "                    if comp_alpha(surname) != True:   #Comprobación de que los apellidos solo contienen letras, llamando a la función comp_alpha\n",
+    "                        print(\"Los apellidos solo debe contener letras.\")\n",
+    "\n",
+    "                    else:\n",
+    "                        num_id = input(\"introduce el número de identificación del paciente: \")\n",
+    "\n",
+    "                        if comp_int(num_id) != True:  #Comprobación de que el id es de tipo integrer, solo números enteros, llamando a la función comp_int\n",
+    "                            print(\"El id solo debe incluir números.\")\n",
+    "\n",
+    "                        else:\n",
+    "                            mod_patient(modify)   #Modificamos el paciente en cuestión\n",
+    "                            \n",
+    "        else:\n",
+    "            print(\"El número de paciente seleccionado no es válido.\")\n",
     "            \n",
     "        print()\n",
     "        \n",
@@ -319,14 +336,6 @@
     "    \n",
     "    opcion = int(input(\"\\n\\nOperación a realizar: \"))    #Volver a pedir el valor de la opción a realizar"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0c772a6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -345,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.1+"
   }
  },
  "nbformat": 4,
