--- a/scripts/scripts6/matrices1.ipynb
+++ b/scripts/scripts6/matrices1.ipynb
@@ -27,11 +27,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Declaramos la matriz utilizando np.array\n",
-    "matriz = np.array([[1, 4, 5, 12],\n",
-    "    [-5, 8, 9, 0],\n",
-    "    [-6, 7, 11, 19],\n",
-    "    [8, 12, -6, 9]])"
+    "#Declaramos la matriz utilizando np.array.randomint, para generar un array cuadrado de 4, con números aleatorios\n",
+    "#entre -10 y 20\n",
+    "matriz = np.random.randint(-10, 20, (4,4))"
    ]
   },
   {
@@ -102,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1+"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
