--- a/scripts/scripts6/matrices3.ipynb
+++ b/scripts/scripts6/matrices3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "mental-session",
    "metadata": {},
    "outputs": [],
@@ -13,18 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "waiting-traveler",
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_array(a):\n",
-    "    return np.random.randint(0, 50,(a))"
+    "    return np.random.randint(-20, 50,(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "beneficial-finder",
    "metadata": {},
    "outputs": [],
@@ -38,61 +38,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "canadian-nutrition",
    "metadata": {},
    "outputs": [],
    "source": [
     "def sum_array(a,b,c):  #Función que realiza la suma de dos vectores\n",
     "    \n",
-    "    suma = np.ones(c)\n",
+    "    suma = np.empty(c)\n",
     "    for i in range(len(a)):    #Bucle que controla cada valor de los vector y los suma\n",
     "        suma[i] = a[i] + b[i]\n",
     "                \n",
-    "    return suma "
+    "    return suma.astype(int)    #astype devuelve la variable en el tipo indicado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "unlimited-perspective",
    "metadata": {},
    "outputs": [],
    "source": [
     "def rest_array(a,b,c):\n",
     "    \n",
-    "    resta = np.ones(c)\n",
+    "    resta = np.empty(c)\n",
     "    for i in range(len(a)):    #Bucle que controla cada valor de los vector y los resta\n",
     "        resta[i] = a[i] - b[i]\n",
     "                \n",
-    "    return resta"
+    "    return resta.astype(int)   #astype devuelve la variable en el tipo indicado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "bizarre-calcium",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def array_zero(a):\n",
-    "    return np.zeros(a)"
+    "def array_zero(a):      #Función que pone a 0 el vector\n",
+    "    array = np.zeros(a)\n",
+    "    return array.astype(int)  #astype devuelve la variable en el tipo indicado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "cooked-gospel",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def array_ones(a):\n",
-    "    return np.ones(a)"
+    "def array_ones(a):      #Función que pone a 1 el vector\n",
+    "    array = np.ones(a)\n",
+    "    return array.astype(int)  #astype devuelve la variable en el tipo indicado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "female-timing",
    "metadata": {},
    "outputs": [],
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "educated-equity",
    "metadata": {},
    "outputs": [],
@@ -122,86 +124,66 @@
    "execution_count": null,
    "id": "selected-johnson",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "1. Mostrar vector.\n",
-      "2. Sumar vector.\n",
-      "3. Restar vector.\n",
-      "4. Poner a 0 el vector.\n",
-      "5. Poner a 1 el vector.\n",
-      "0. Salir.\n",
-      "\n",
-      "\n",
-      "Indica la longitud del vector: 2\n",
-      "Indica la operación a realizar: 2\n",
-      "\n",
-      "La suma del vector:  \n",
-      "25 11 \n",
-      "\n",
-      "y el vector \n",
-      "24 17 \n",
-      "\n",
-      "tiene como resultado\n",
-      "\n",
-      "49.0 28.0 \n",
-      "\n",
-      "\n",
-      "1. Mostrar vector.\n",
-      "2. Sumar vector.\n",
-      "3. Restar vector.\n",
-      "4. Poner a 0 el vector.\n",
-      "5. Poner a 1 el vector.\n",
-      "0. Salir.\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "menu()\n",
     "longitud = int(input(\"Indica la longitud del vector: \"))\n",
+    "print()\n",
+    "menu()\n",
     "seleccion= int(input(\"Indica la operación a realizar: \"))\n",
-    "vector1 = read_array(longitud)\n",
+    "vector1 = read_array(longitud)    #Declaramos el vector inicial con la longitud introducida\n",
+    "\n",
     "while (seleccion != 0):\n",
     "    \n",
-    "    if seleccion == 1:\n",
+    "    if seleccion == 1:   #Llamamos a la función show_array que muestra el vector\n",
     "        show_array(vector1)\n",
     "        print()\n",
     "        \n",
-    "    elif seleccion == 2:\n",
+    "    elif seleccion == 2:  #Establecemos un segundo vector con la misma longitud que el primero y realizamos la \n",
+    "                          #suma de los dos vectores mediante la función sum_array, mostrando el resultado por pantalla\n",
+    "            \n",
     "        vector2 = read_array(longitud)\n",
     "        calculo = sum_array(vector1, vector2, longitud)\n",
+    "        \n",
     "        print(\"\\nLa suma del vector: \",end =\" \")\n",
     "        show_array(vector1)\n",
+    "        \n",
     "        print(\"\\ny el vector\", end=\" \")\n",
     "        show_array(vector2)\n",
+    "        \n",
     "        print(\"\\ntiene como resultado\")\n",
     "        show_array(calculo)\n",
     "        print()\n",
     "        \n",
-    "    elif seleccion == 3:\n",
+    "    elif seleccion == 3:  #Establecemos un segundo vector con la misma longitud que el primero y realizamos la \n",
+    "                          #resta de los dos vectores mediante la función rest_array, mostrando el resultado por pantalla\n",
+    "            \n",
     "        vector2 = read_array(longitud)\n",
     "        calculo = rest_array(vector1, vector2, longitud)\n",
+    "        \n",
     "        print(\"\\nLa resta del vector: \",end =\" \")\n",
     "        show_array(vector1)\n",
+    "        \n",
     "        print(\"\\ny el vector\", end=\" \")\n",
     "        show_array(vector2)\n",
+    "        \n",
     "        print(\"\\ntiene como resultado\")\n",
     "        show_array(calculo)\n",
     "        print()\n",
     "        \n",
-    "    elif seleccion == 4:\n",
+    "    elif seleccion == 4:  #Estblecemos todos los valores del vector a 0 llamando a la función array_zero\n",
+    "        \n",
     "        vector1 = array_zero(longitud)\n",
-    "        print(\"\\nEl vector ha sido establecido a 0: \",show_array(vector1))\n",
+    "        \n",
+    "        print(\"\\nEl vector ha sido establecido a 0: \")\n",
+    "        show_array(vector1)\n",
     "        print()\n",
     "        \n",
-    "    elif seleccion == 5:\n",
+    "    elif seleccion == 5:  #Estblecemos todos los valores del vector a 1 llamando a la función array_ones\n",
+    "        \n",
     "        vector1 = array_ones(longitud)\n",
-    "        print(\"\\nEl vector ha sido establecido a 1: \",show_array(vector1))\n",
+    "        \n",
+    "        print(\"\\nEl vector ha sido establecido a 1: \")\n",
+    "        show_array(vector1)\n",
     "        print()\n",
     "        \n",
     "    else:\n",
@@ -211,22 +193,6 @@
     "    menu()\n",
     "    seleccion=int(input(\"Indica la operación a realizar: \"))   #Volvemos a pedir operación para no parar el programa."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "afraid-metro",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "tracked-louisiana",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -245,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1+"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
