Cálculos con matrices

--- a/scripts/scripts6/calculos-matrices.ipynb
+++ b/scripts/scripts6/calculos-matrices.ipynb
@@ -43,7 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sum_matrix(a,b,c):  #Función que realiza la suma de dos matrices\n",
+    "def sum_matrix(a,b,c):  #Función que realiza la suma de dos matrices, para sumar matrices se han de sumar el valor que contiene cada posición\n",
+    "                        #de la primera matriz con el valor de la misma posición de la segunda\n",
     "    \n",
     "    for i in range(len(a)):     #Bucle que controla cada vector de la matriz\n",
     "        \n",
@@ -60,7 +61,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rest_matrix(a,b,c):  #Función que realiza la resta de dos matrices\n",
+    "def rest_matrix(a,b,c):  #Función que realiza la resta de dos matrices, para restar matrices se han de restar el valor que contiene cada posición\n",
+    "                         #de la primera matriz con el valor de la misma posición de la segunda, prestando atención al símbolo.\n",
     "    \n",
     "    for i in range(len(a)):     #Bucle que controla cada vector de la matriz\n",
     "        \n",
@@ -77,7 +79,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def multi_matrix(a,b,c):  #Función que realiza la multiplicación de dos matrices\n",
+    "def multi_matrix(a,b,c):  #Función que realiza la multiplicación de dos matrices, es necesario que el número de columnas\n",
+    "                          #de la primera matriz sea igual al número de filas de la segunda. Y sabemos que la matriz resultante\n",
+    "                          #tendrá una dimensión equivalente al número de filas de la primera matriz y el número de columnas de la segunda\n",
     "    \n",
     "    #Necesitamos 3 bucles para controlar las filas y columnas de cada matriz, sabiendo que las filas de la\n",
     "    #segunda matriz tiene que ser igual a las columnas de la primera par poderse multiplicar.\n",
@@ -113,13 +117,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def comp_multi(a,b): #Función que comprueba si se pueden multiplicar las matrices\n",
+    "def comp_multi(a,b): #Función que comprueba si se pueden multiplicar las matrices, comprobando si el número de columnas \n",
+    "                     #de la primera matriz es igual al de las filas de la segunda.\n",
     "    \n",
     "    if ((dimension(a)[1] == dimension(b)[0])):\n",
     "        return True\n",
     "    \n",
     "    else:\n",
-    "        print(\"\\nEl número de filas de la segunda matriz no es igual al de las filas de la primera.\")\n",
+    "        print(\"\\nEl número de filas de la segunda matriz no es igual al de las columnas de la primera.\")\n",
     "        return False"
    ]
   },
@@ -168,6 +173,7 @@
    "source": [
     "def menu():     #Función que muestra el menú de la calculadora.\n",
     "    print()\n",
+    "    print(\"\\n****ESCOGE UNA OPCIÓN****\\n\")\n",
     "    print(\"1.Establecer matrices\")\n",
     "    print(\"2.Mostrar matrices\")\n",
     "    print(\"3.Suma\")\n",
@@ -207,32 +213,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seleccion = 1\n",
+    "seleccion = 1   #Variable que fuerza a crear las variables al comienzo\n",
+    "continuar = 0   #Variable que no permite continuar si no se crean las matrices\n",
     "\n",
-    "while (seleccion != 0):\n",
+    "while (seleccion != 0):    #Bucle que permite reazliar las funciones de la calculadora sin salir\n",
     "    \n",
-    "    if seleccion == 1:\n",
-    "        menu_matrix()\n",
-    "        opcion = int(input(\"\\nIndica cómo deseas que sean las matrices: \"))\n",
+    "    if seleccion == 1:   #Opción para crear las matrices\n",
     "        \n",
-    "        if opcion == 1:\n",
-    "            size = int(input(\"Introduce el tamaño de la matriz (la cantidad de vectores que va a almacenar): \"))\n",
-    "            length = int(input(\"Introduce la longitud de los vectores de la matriz: \"))\n",
-    "            matrix1 = read_matrix(size,length)\n",
-    "            matrix2 = read_matrix(size,length)\n",
-    "            calculo = np.zeros((size,length))\n",
+    "        print()\n",
+    "        print(\"\\n**AYUDA**\\n\")\n",
+    "        print(\"Para sumar o restar ambas matrices han de tener la misma dimensión.\")\n",
+    "        print(\"Para multiplicar matrices, la cantidad de columnas de la primera matriz ha de ser igual a las filas de la segunda.\")\n",
+    "        print(\"Para dividir matrices, necesitamos al menos una matriz cuadrada para poder sacar su inversa y además que cumpla el requisito de la multiplicación.\\n\")\n",
     "        \n",
-    "        elif opcion == 2:\n",
-    "            print(\"Recuerda que no se pueden sumar ni restar matrices de diferente dimensión y que si se desea dividir se necesita una matriz cuadrada.\\n\")\n",
-    "            size1 = int(input(\"Introduce el tamaño de la primera matriz (la cantidad de vectores que va a almacenar): \"))\n",
-    "            length1 = int(input(\"Introduce la longitud de los vectores de la primera matriz: \"))\n",
-    "            matrix1 = read_matrix(size1,length1)\n",
+    "        menu_matrix() #Llamada al menú de crecación de matrices\n",
+    "        \n",
+    "        while continuar != 1:   #Bucle que controla si se han creado las matrices para poder continuar\n",
+    "            \n",
+    "            opcion = int(input(\"\\nIndica cómo deseas que sean las matrices: \"))\n",
+    "            \n",
+    "            if opcion == 1:   #Opción para crear dos matrices con las mismas dimensiones\n",
+    "                size = int(input(\"Introduce el tamaño de la matriz (la cantidad de vectores que va a almacenar): \"))\n",
+    "                length = int(input(\"Introduce la longitud de los vectores de la matriz: \"))\n",
+    "                matrix1 = read_matrix(size,length)   #Creación de la primera matriz utilizando la función read_matrix\n",
+    "                matrix2 = read_matrix(size,length)   #Creación de la segunda matriz utilizando la función read_matrix\n",
+    "                calculo = np.zeros((size,length))    #Creación de una matriz \"vacía\", para poder almacenar los cálculos\n",
+    "                continuar = 1                        #Variable que permite continuar\n",
     "\n",
-    "            size2 = int(input(\"\\nIntroduce el tamaño de la segunda matriz (la cantidad de vectores que va a almacenar): \"))\n",
-    "            length2 = int(input(\"Introduce la longitud de los vectores de la segunda matriz: \"))\n",
-    "            matrix2 = read_matrix(size2,length2)\n",
+    "            elif opcion == 2: #Opción para crear dos matrices con diferentes dimensiones       \n",
+    "                size1 = int(input(\"Introduce el tamaño de la primera matriz (la cantidad de vectores que va a almacenar): \"))\n",
+    "                length1 = int(input(\"Introduce la longitud de los vectores de la primera matriz: \"))\n",
+    "                matrix1 = read_matrix(size1,length1) #Creación de la primera matriz utilizando la función read_matrix\n",
+    "\n",
+    "                size2 = int(input(\"\\nIntroduce el tamaño de la segunda matriz (la cantidad de vectores que va a almacenar): \"))\n",
+    "                length2 = int(input(\"Introduce la longitud de los vectores de la segunda matriz: \"))\n",
+    "                matrix2 = read_matrix(size2,length2) #Creación de la segunda matriz utilizando la función read_matrix\n",
+    "                continuar = 1                        #Variable que permite continuar\n",
+    "\n",
+    "            else:     #Opción por defecto si se introduce un valor no establecido en el menú\n",
+    "                print(\"\\nLa opción introducida no es válida.\")\n",
     "    \n",
-    "    elif seleccion == 2:\n",
+    "    elif seleccion == 2:   #Opción que muestra las matrices creadas utilizando la función show_matrix\n",
     "        print(\"\\nLa matriz 1 es: \")\n",
     "        show_matrix(matrix1)\n",
     "        \n",
@@ -240,7 +261,7 @@
     "        show_matrix(matrix2)\n",
     "        print()\n",
     "        \n",
-    "    elif seleccion == 3:\n",
+    "    elif seleccion == 3:   #Opción que suma matrices utilizando la función sum_matrix\n",
     "        suma = sum_matrix(matrix1,matrix2,calculo)\n",
     "        \n",
     "        print(\"\\nLa suma de la matriz: \")\n",
@@ -267,6 +288,7 @@
     "        print()\n",
     "        \n",
     "    elif seleccion == 5:\n",
+    "        \n",
     "        if comp_multi(matrix1,matrix2):\n",
     "            calculo = np.zeros((dimension(matrix1)[0],dimension(matrix2)[1]))\n",
     "            multi = multi_matrix(matrix1,matrix2,calculo)\n",
@@ -281,36 +303,42 @@
     "            show_matrix(multi)\n",
     "            print()\n",
     "        \n",
-    "        else:\n",
-    "            print(\"Las matrices no cumplen con el requisito de poseer dimensiones compatibles\")\n",
-    "        \n",
     "    elif seleccion == 6:\n",
     "        \n",
     "        operadores = elegir_divisor(matrix1, matrix2)\n",
     "\n",
     "        if operadores:\n",
+    "            if comp_multi(dividendo,divisor):\n",
+    "                \n",
+    "                divisor = operadores[0]\n",
+    "                dividendo = operadores[1]\n",
+    "                calculo = np.zeros((dimension(dividendo)[0],dimension(divisor)[1]))\n",
     "\n",
-    "            divisor = operadores[0]\n",
-    "            dividendo = operadores[1]\n",
-    "            calculo = np.zeros((dimension(matrix1)[0],dimension(matrix2)[1]))\n",
+    "                divi = div_matrix(dividendo,divisor,calculo)\n",
     "\n",
-    "            divi = div_matrix(dividendo,divisor,calculo)\n",
+    "                print(\"\\nLa división de la matriz: \")\n",
+    "                show_matrix(dividendo)\n",
     "\n",
-    "            print(\"\\nLa división de la matriz: \")\n",
-    "            show_matrix(dividendo)\n",
+    "                print(\"\\ny la matriz:\")\n",
+    "                show_matrix(divisor)\n",
     "\n",
-    "            print(\"\\ny la matriz:\")\n",
-    "            show_matrix(divisor)\n",
-    "\n",
-    "            print(\"\\ntiene como resultado:\")\n",
-    "            show_matrix(divi)\n",
-    "            print()\n",
+    "                print(\"\\ntiene como resultado:\")\n",
+    "                show_matrix(divi)\n",
+    "                print()\n",
     "        \n",
     "    else:\n",
     "        print(\"\\nLa operación escogida no es válida.\")\n",
-    "        \n",
+    "    menu()\n",
     "    seleccion=int(input(\"\\nIndica la operación a realizar: \"))   #Volvemos a pedir operación para no parar el programa."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "awful-speed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
