--- a/scripts/scripts6/calculos-matrices.ipynb
+++ b/scripts/scripts6/calculos-matrices.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "def rest_matrix(a,b,c):  #Función que realiza la resta de dos matrices, para restar matrices se han de restar el valor que contiene cada posición\n",
-    "                         #de la primera matriz con el valor de la misma posición de la segunda, prestando atención al símbolo.\n",
+    "                         #de la primera matriz con el valor de la misma posición de la segunda, prestando atención al símbolo\n",
     "    \n",
     "    for i in range(len(a)):     #Bucle que controla cada vector de la matriz\n",
     "        \n",
@@ -84,7 +84,7 @@
     "                          #tendrá una dimensión equivalente al número de filas de la primera matriz y el número de columnas de la segunda\n",
     "    \n",
     "    #Necesitamos 3 bucles para controlar las filas y columnas de cada matriz, sabiendo que las filas de la\n",
-    "    #segunda matriz tiene que ser igual a las columnas de la primera par poderse multiplicar.\n",
+    "    #segunda matriz tiene que ser igual a las columnas de la primera par poderse multiplicar\n",
     "    \n",
     "    for i in range(len(a)):  #Bucle que controla las filas de la primera matriz\n",
     "        for s in range(dimension(b)[1]):  #Buvle que controla las columnas de la segunda matriz\n",
@@ -101,10 +101,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def div_matrix(a,b,c):  #Función que realiza la división de dos matrices\n",
+    "def div_matrix(a,b,c):  #Función que realiza la división de dos matrices, para dividir matrices necesitamos que una de ellas sea cuadrada,\n",
+    "                        #para poder sacar su inversa, la matriz inversa se obtiene al elevar a -1 la matriz. Una vez obtenida la inversa\n",
+    "                        #se han de tener en cuenta que necesita cumplir los requisitos de la mulitplicación, ya que se multiplicarán\n",
+    "                        #la matriz inversa por la otra, y necesitan tener el mismo número de columnas que de filas, igual que en la multiplicación  \n",
     "    \n",
     "    for i in range(len(a)):  #Bucle que controla las filas de la primera matriz\n",
-    "        for s in range(dimension(a)[1]):   #Bucle que controla las filas de la segunda matriz\n",
+    "        for s in range(dimension(a)[1]):   #Bucle que controla las columnas de ambas matrices, ya que las colummnas de la\n",
+    "                                           #matriz que hace la función de dividendo va a tener las mismas columnas q la segunda\n",
     "            calculo[i][s] += a[i][s] * b[s][i]\n",
     "                \n",
     "    return c.astype(int)    #astype devuelve la variable en el tipo indicado"
@@ -118,7 +122,7 @@
    "outputs": [],
    "source": [
     "def comp_multi(a,b): #Función que comprueba si se pueden multiplicar las matrices, comprobando si el número de columnas \n",
-    "                     #de la primera matriz es igual al de las filas de la segunda.\n",
+    "                     #de la primera matriz es igual al de las filas de la segunda\n",
     "    \n",
     "    if ((dimension(a)[1] == dimension(b)[0])):\n",
     "        return True\n",
@@ -146,20 +150,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def elegir_divisor(a,b): #Función que establece que matriz será divisora, \n",
+    "def elegir_divisor(a,b): #Función que establece que matriz será divisora, comprobando\n",
     "                         #si alguna de las dos cumple el requisito de ser cuadrada\n",
     "        \n",
-    "    dimension1 = dimension(a)\n",
-    "    dimension2 = dimension(b)\n",
+    "    dimension1 = dimension(a)   #Utilizando la función dimensión(), se obtiene la dimensión de la matriz a\n",
+    "    dimension2 = dimension(b)   #Utilizando la función dimensión(), se obtiene la dimensión de la matriz b\n",
     "    \n",
-    "    if dimension2[0] == dimension2[1]:\n",
+    "    if dimension2[0] == dimension2[1]:   #Si la matriz b es cuadrada se devuelve su inversa utilizando la \n",
+    "                                         #función linalg.inv de numpy, y a su lado el valor de la matriz a\n",
     "        return np.linalg.inv(b),a\n",
     "    \n",
-    "    elif dimension1[0] == dimension1[1]:\n",
+    "    elif dimension1[0] == dimension1[1]: #Si la matriz a es cuadrada se devuelve su inversa utilizando la \n",
+    "                                         #función linalg.inv de numpy, y a su lado el valor de la matriz b, y se avisa\n",
+    "                                         #de que el divisor va a ser la matriz a\n",
     "        print(\"\\nYa que la segunda matriz no es cuadrada establecemos la primera como divisora.\\n\")\n",
     "        return np.linalg.inv(a),b\n",
     "    \n",
-    "    else:\n",
+    "    else:    #Si no cumple los requisitos no se puede dividir\n",
     "        print(\"\\nNo se puede dividir, ya que ninguna de las matrices es cuadrada y no se puede obtener su inversa.\\n\")\n",
     "        return False"
    ]
@@ -192,8 +199,12 @@
    "source": [
     "def menu_matrix():     #Función que muestra opciones para definir las matrices iniciales\n",
     "    print()\n",
+    "    print(\"\\n***AVISO***\\n\")\n",
+    "    print(\"Para sumar o restar ambas matrices han de tener la misma dimensión.\")\n",
+    "    print(\"Para multiplicar matrices, la cantidad de columnas de la primera matriz ha de ser igual a las filas de la segunda.\")\n",
+    "    print(\"Para dividir matrices, necesitamos al menos una matriz cuadrada para poder sacar su inversa y además que cumpla el requisito de la multiplicación.\\n\")\n",
     "    print(\"1.Matrices de igual dimensión\")\n",
-    "    print(\"2.Matrices de diferente dimensión\")"
+    "    print(\"2.Matrices de diferente dimensión\\n\")"
    ]
   },
   {
@@ -219,13 +230,7 @@
     "while (seleccion != 0):    #Bucle que permite reazliar las funciones de la calculadora sin salir\n",
     "    \n",
     "    if seleccion == 1:   #Opción para crear las matrices\n",
-    "        \n",
-    "        print()\n",
-    "        print(\"\\n**AYUDA**\\n\")\n",
-    "        print(\"Para sumar o restar ambas matrices han de tener la misma dimensión.\")\n",
-    "        print(\"Para multiplicar matrices, la cantidad de columnas de la primera matriz ha de ser igual a las filas de la segunda.\")\n",
-    "        print(\"Para dividir matrices, necesitamos al menos una matriz cuadrada para poder sacar su inversa y además que cumpla el requisito de la multiplicación.\\n\")\n",
-    "        \n",
+    "                    \n",
     "        menu_matrix() #Llamada al menú de crecación de matrices\n",
     "        \n",
     "        while continuar != 1:   #Bucle que controla si se han creado las matrices para poder continuar\n",
@@ -274,7 +279,7 @@
     "        show_matrix(suma)\n",
     "        print()\n",
     "        \n",
-    "    elif seleccion == 4:\n",
+    "    elif seleccion == 4:  #Opción que resta matrices utilizando la función rest_matrix\n",
     "        resta = rest_matrix(matrix1,matrix2,calculo)\n",
     "        \n",
     "        print(\"\\nLa resta de la matriz: \")\n",
@@ -287,7 +292,8 @@
     "        show_matrix(resta)\n",
     "        print()\n",
     "        \n",
-    "    elif seleccion == 5:\n",
+    "    elif seleccion == 5:  #Opción que multiplica matrices utilizando la función multi_matrix, pero comprobando antes\n",
+    "                          #si cumple los requisitos mediante la función comp_multi\n",
     "        \n",
     "        if comp_multi(matrix1,matrix2):\n",
     "            calculo = np.zeros((dimension(matrix1)[0],dimension(matrix2)[1]))\n",
@@ -303,7 +309,9 @@
     "            show_matrix(multi)\n",
     "            print()\n",
     "        \n",
-    "    elif seleccion == 6:\n",
+    "    elif seleccion == 6:  #Opción que divide matrices utilizando la función div_matrix, pero comprobando si alguna de las matrices\n",
+    "                          #puede ser inversa y estableciendola como divisora mediante la función elegir_divisor y además se comprueba \n",
+    "                          #si cumple los requisitos para realizar la multiplicación mediante mediante la función comp_multi\n",
     "        \n",
     "        operadores = elegir_divisor(matrix1, matrix2)\n",
     "\n",
@@ -331,14 +339,6 @@
     "    menu()\n",
     "    seleccion=int(input(\"\\nIndica la operación a realizar: \"))   #Volvemos a pedir operación para no parar el programa."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "awful-speed",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -357,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1+"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
